ENTRYSTORE-632 #resolve Enable loading of configuration from URLs