@@ -25,7 +25,7 @@ import java.beans.PropertyChangeListener;
 import java.beans.PropertyChangeSupport;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.InputStream;
 import java.io.OutputStreamWriter;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -210,15 +210,15 @@ public class PropertiesConfiguration implements Config {
 	}
 
 	public void load(URL configURL) throws IOException {
+		InputStream is = null;
 		try {
-			String escapedURL = configURL.toString().replaceAll(" ", "%20");
-			URI url = new URI(escapedURL);
-			File file = new File(url);
-			InputStreamReader input = new InputStreamReader(Files.newInputStream(file.toPath()), "UTF-8");
-			config.load(input);
-			input.close();
-		} catch (URISyntaxException e) {
-			throw new IOException(e.getMessage());
+			URL escapedURL = new URL(configURL.toString().replaceAll(" ", "%20"));
+			is = escapedURL.openStream();
+			config.load(is);
+		} finally {
+			if (is != null) {
+				is.close();
+			}
 		}
 	}
 
